# DRiX-Mail-v2

./: .env.example  .env.openrouter.example  .gitignore  OPENROUTER.md  README.md  docker-compose.yml  railway.json
backend/: Dockerfile  pyproject.toml  setup.cfg
backend/app/: config.py  database.py  engine.py  main.py  models.py  schemas.py  seed.py  tde.py
backend/app/config/: __init__.py
backend/app/engine/: __init__.py
backend/migrations/: 001_initial.py  001_initial.sql
backend/narrative_platform_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_csv.py  test_engine.py  test_tabular_import.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: layout.tsx  nav.css  page.tsx  style.css
frontend/app/setup/: page.tsx  setup.module.css
