[project]
name = "narrative-platform-api"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1", "uvicorn[standard]>=0.30,<1", "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4", "pydantic-settings>=2.6,<3", "python-multipart>=0.0.12,<1",
  "httpx>=0.27,<1", "beautifulsoup4>=4.12,<5", "pypdf>=5,<6", "python-pptx>=1.0,<2",
  "openai>=1.50,<2", "email-validator>=2.2,<3", "openpyxl>=3.1,<4"
]
[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=5,<6"]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
